finishing the facerecognition

--- a/src/components/ImageLinkForm/css/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/css/ImageLinkForm.css
@@ -1,4 +1,4 @@
-.background {
+.background-image {
 	background-color:#269;
 	background-image: linear-gradient(white 2px, transparent 2px),
 	linear-gradient(90deg, white 2px, transparent 2px),
