--- a/src/components/ImageLinkForm/css/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/css/ImageLinkForm.css
@@ -1,5 +1,5 @@
 .background-image {
-	background-color:#269;
+	background-color:darkblue;
 	background-image: linear-gradient(white 2px, transparent 2px),
 	linear-gradient(90deg, white 2px, transparent 2px),
 	linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
@@ -7,3 +7,7 @@
 	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
 	background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
+
+/*input[type='file'] {
+  opacity:0    
+}*/
