--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,4 +1,3 @@
 .logo {
-	background: rgb(98,101,228);
-	background: radial-gradient(circle, rgba(98,101,228,1) 30%, rgba(46,159,173,1) 80%);
+	background: radial-gradient(circle, rgb(255 190 31) 24%, rgb(30 230 255) 80%);
 }
