--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body, html{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to left, rgba(30,230,255,1)25%, rgba(98,101,228,1) 75%);
+  min-width: 411px
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
